responsive(not yet doe)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,3 +219,8 @@ hr{
 	color:#aaa;
 
 }
+navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover{
+	color:#333;
+	
+}
+
