--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ nav.navbar {
 
 /* HERO */
 #hero {
-	height: 100vh;
+	height: 105vh;
 
 	background-size: cover;
 	background-position: center;
@@ -106,8 +106,8 @@ div.col-sm-10{
 	width:250px;
 	margin-left: 0px;
 }
-button.btn.btn-success{
-	width: 100px;
+button.btn.btn-primary{
+	width: 248px;
 }
 div.form-group{
 	padding-left: 50px;
@@ -117,6 +117,7 @@ h3.paddingtitleform{
 }
 div.form-group.text-center{
 	padding:0px;
+	padding-left: 75px;
 }
 #payroll-container{
 	margin-top: 100px;
@@ -124,7 +125,8 @@ div.form-group.text-center{
 	height: 401px;
 }
 div.form-group.pr{
-	padding-left: 0px;
+	padding-left:0px;
+
 }
 div.form-group.prr{
 	padding-left: 60px;
@@ -221,4 +223,26 @@ hr{
 }
 #myCarousel{
 font-family: 'Source Sans Pro', sans-serif;
+}
+div.form-group.pr.text-center{
+	padding-left:0px;
+}
+div.col-sm-offset-4.col-sm-8{
+	margin-left:162px;
+}
+div.col-sm-offset-4.col-sm-8.fp{
+	margin-left:210px
+}
+button.btn.btn-primary.r{
+	width: 100px;
+}
+div.form-group.text-center.r{
+	padding-top: 15px;
+	padding-left: 108px;
+}
+option.dropdown-header{
+	font-size:15px;
+}
+div.col-xs-12.au{
+	margin-bottom: 10px;
 }
