--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ nav.navbar {
 	border-radius: 0px;
 	border: none;
 	background: #222222;
+	z-index: 1;
 }
 
 #menu-header{
@@ -33,11 +34,20 @@ nav.navbar {
 /* HERO */
 #hero {
 	height: 105vh;
-
+	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
 	background-image: url('../img/hero.jpg');
 	margin-top: -101px;
+	position: relative;
+}
+.hero-overlay {
+	position: absolute;
+	background: rgba(0, 0, 0, 0.48);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 }
 /* underline transition */
 .sliding-middle-out {
@@ -70,8 +80,6 @@ div.navbar.navbar-static.bottom{
 }
 div.col-xs-12{
 	padding: 0;
-}
-div.navbar.navbar-static.bottom p img{
 }
 #footer-nci {
 	padding-left: 11px;
@@ -126,7 +134,6 @@ div.form-group.text-center{
 }
 div.form-group.pr{
 	padding-left:0px;
-
 }
 div.form-group.prr{
 	padding-left: 60px;
@@ -134,7 +141,7 @@ div.form-group.prr{
 #payroll-reg-container{
 	margin-top: 50px;
 	width: 700px;
-	height: 725px;
+	height: 875px;
 }
 #contact-us-margin{
 	padding-bottom: 26px;
@@ -222,7 +229,8 @@ hr{
 
 }
 #myCarousel{
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Source Sans Pro', sans-serif !important;
+font-weight: 300;
 }
 div.form-group.pr.text-center{
 	padding-left:0px;
@@ -245,4 +253,17 @@ option.dropdown-header{
 }
 div.col-xs-12.au{
 	margin-bottom: 10px;
+}
+/* Carousel */
+.carousel-inner .item h3 {
+	font-weight: 300;
+	font-size: 4rem;
+	text-transform: uppercase;
+	margin: 0;
+}
+.carousel-inner .item h2 {
+	margin-top: .2rem;
+	font-size: 5rem;
+	font-weight: 700;
+	text-transform: uppercase;
 }
