new landing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,21 +169,19 @@ hr{
 	border: .5px solid #c7c7c7;
 	margin: 3px 15px 20px 15px;}
 #home_content{
-	padding:30px;
-	padding-top: 50px;
-	padding-bottom: 50px;
+	padding:50px;
 }
 .services{
 		border:1px solid #eee;
-		height: 650px;
-		padding:10px;
+		padding:20px;
 		border-radius: 5px;
 		box-shadow: 2px 2px 5px #BEBEBE;
+		height: 150px;
+
 	}
 	.title{
-		font-size: 20px;
 		color:#006495;
-		font-weight: bold;
+		
 	}
 	.servicestitle{
 		color:#128CDF;
@@ -211,12 +209,17 @@ hr{
 	font-weight: bold!important;
 	text-align: center;
 }
-.icons{
-	padding:10px;
+.price{
+	color:white;
+	background-color: rgb(233, 97, 44);
+	padding:5px;
+	border-radius: 2px;
+	font-size: 12px;
+	float: right;
 }
-.icons:hover{
-	color:#aaa;
-
+.icon{
+	color: #F2635F;
+	font-size: 90px;
 }
 navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover{
 	color:#333;
