--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,4 +225,46 @@ navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:
 	color:#333;
 	
 }
+.sidenav {
+    height: 50%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    list-style-type: none;
+}
 
+.sidenav a {
+    
+    text-decoration: none;
+    font-size: 18px;
+    text-align: center;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+	list-style-type: none;
+}
+
+.sidenav a:hover{
+    color: #f1f1f1;
+    text-decoration: none!important;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+  .sidenave a:hover{text-decoration: none;}
+}
