--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,7 @@ nav.navbar {
 	background: rgba(0,0,0,0);
 	height: 90px;
 	padding: 20px 0;
+	margin-left: 25px; 
 }
 div.navbar.navbar-static.bottom{
 	margin: 0;
@@ -138,7 +139,7 @@ div.col-sm-10{
 	margin-left: 0px;
 }
 button.btn.btn-primary{
-	width: 248px;
+	width: 243px;
 }
 div.form-group{
 	padding-left: 50px;
@@ -388,7 +389,7 @@ div.col-xs-12.au{
 	text-transform: uppercase;
 }
 #site-map-footer{
-	margin-bottom: 116px;
+	margin-bottom: 105px;
 }
 option.dropdown-header.item{
 	font-size: 16px;
@@ -409,3 +410,34 @@ option.dropdown-header.item{
 ul .footer_menus li{
 	display:inline;
 }
+/*Ghost button*/
+.ghost-button {
+    color: rgb(233, 97, 44);
+    background: #ffffff;
+    padding: 7px 12px;
+    display: inline-block;
+    text-decoration: none;
+    transition: all 500ms ease-in-out;
+
+}
+.ghost-button:hover, .ghost-button:active {
+  color:#ffffff;
+  background:rgb(233, 97, 44);
+}
+.ghost-button2 {
+
+	border-collapse: collapse;
+	border: 2px solid rgb(233, 97, 44);
+    color: rgb(233, 97, 44);
+    background: #ffffff;
+    margin:0;
+    padding: 0;
+    display: inline-block;
+    text-decoration: none;
+    transition: all 200ms ease-in-out;
+
+}
+a.ghost-button2{
+	margin-top: 10px;
+}
+/*End Ghost Button*/
