--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,9 +172,7 @@ div.form-group.prr{
 	width: 700px;
 	height: 875px;
 }
-#contact-us-margin{
-	padding-bottom: 26px;
-}
+
 #support-margin{
 	padding-bottom: 88px;
 }
@@ -229,7 +227,6 @@ hr{
 	height: 180px;
 }
 .col-xs-12.hgt{
-	margin-top: 200px;
 	height: 273.5px; 
 	margin-bottom: 40px;
 }
@@ -255,7 +252,7 @@ hr{
 	color:rgb(51, 51, 51);
 }
 #hero-content {
-	margin-top: 60%;
+	margin-top: 20%;
 	text-align: center;
 	color: #f8f8f8;
 }
@@ -457,16 +454,64 @@ li.inline-menus a{
 	padding: 0px 5px;
 	color:#808080;
 }
-ul.nav.navbar-nav{
-	margin-top: 15px;
-	height: 20px;
-	text-align: center;
 
-}
 div.text-center{
 	margin-top: -30px;
 }
 div.text-center.mtop{
 	margin-top: -8px;
 }
+.collapse.navbar-collapse.k{
+		padding: 0px;
+	}
 	/*END MOBILE FOOTER*/
+@media screen and (max-width: 532px){
+	#hero-content{
+		margin-top: 75%;
+	}
+}
+@media screen and (max-width: ){
+	#hero-content{
+		margin-top: 60%;
+	}
+}
+@media screen and (max-width: 766px){
+	ul.nav.navbar-nav{
+		text-align: center;
+	}
+	#hero-content{
+		margin-top: 45%;
+	}
+	
+	#menu-header{
+	float: none;
+	}
+	.navbar-nav{
+	margin:0px;
+	}
+	.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+		border: none;
+		background-color: #333;
+	}
+
+	.sliding-middle-out:hover:after {
+	background: none;
+	color:red;
+	}
+
+	ul#menu-header.nav.navbar-nav{
+		height: 260px;
+	}
+
+}
+#menu-footer{
+	margin-top: 16px;
+	margin-bottom: 10px;
+	margin-right: 20px;
+}
+hr{
+	margin-bottom: 10px;
+}
+.nav.navbar-nav{
+	height: 42px;
+} 
