--- a/public/css/style.css
+++ b/public/css/style.css
@@ -515,3 +515,13 @@ hr{
 .nav.navbar-nav{
 	height: 42px;
 } 
+.form-group.pr-xs{
+	margin:0px;
+	    margin-bottom: 9px;
+	width: 215px;
+	padding-left:15px;
+}
+.control-label-xs{
+	margin-bottom: 5px;
+    margin-left: 3px;
+}
